unpackaged/main/default/objects/CostCentre__c/CostCentre__c.object-meta.xml
<CustomObject>
    <description>Cost centres sourced from Zoey</description>
    <label>Cost Centre</label>
    <nameField>
        <label>Cost Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>