unpackaged/main/default/objects/CostCentre__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the parent account record for the cost centre</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Centres</relationshipLabel>
    <relationshipName>CostCentres</relationshipName>
    <type>Lookup</type>
</CustomField>