unpackaged/main/default/objects/CostCentre__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <description>Zoey Account Code</description>
    <label>Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>