unpackaged/main/default/objects/CostCentre__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Zoey Account Name</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>