unpackaged/main/default/objects/CostCentre__c/fields/AccountReference__c.field-meta.xml
<CustomField>
    <fullName>AccountReference__c</fullName>
    <description>Zoey Account Reference</description>
    <label>Account Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>