unpackaged/main/default/objects/CostCentre__c/fields/ActiveServices__c.field-meta.xml
<CustomField>
    <fullName>ActiveServices__c</fullName>
    <description>Cost Centre - Number of Active Services - integrated with Zoey platform</description>
    <label>Active Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>