unpackaged/main/default/objects/CostCentre__c/fields/Added__c.field-meta.xml
<CustomField>
    <fullName>Added__c</fullName>
    <description>Date cost centre record created on the Zoey platform</description>
    <label>Added</label>
    <type>DateTime</type>
</CustomField>