unpackaged/main/default/objects/CostCentre__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>Cost Centre Address Line 1 - integrated with the Zoey platform</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>