unpackaged/main/default/objects/CostCentre__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>Cost Centre Address Line 2 - integrated with the Zoey platform</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>