unpackaged/main/default/objects/CostCentre__c/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <description>Cost Centre Address Line 3 - integrated with the Zoey platform</description>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>