unpackaged/main/default/objects/CostCentre__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Cost Centre Email - integrated with Zoey platform</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>