unpackaged/main/default/objects/CostCentre__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <description>Primary Cost Centre Indicator - integrated with Zoey platform</description>
    <label>Is Primary</label>
    <length>10</length>
    <type>Text</type>
</CustomField>