unpackaged/main/default/objects/CostCentre__c/fields/IsSeparateInvoice__c.field-meta.xml
<CustomField>
    <fullName>IsSeparateInvoice__c</fullName>
    <description>Separate invoice indicator - integrated with Zoey platform</description>
    <label>Is Separate Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>