unpackaged/main/default/objects/CostCentre__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Cost Centre Payment Method - integrated with Zoey platform</description>
    <label>Payment Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>