unpackaged/main/default/objects/CostCentre__c/fields/PaymentReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentReference__c</fullName>
    <description>Cost Centre Payment Reference - integrated with Zoey platform</description>
    <label>Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>