unpackaged/main/default/objects/CostCentre__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Cost Centre Phone Number - integrated with Zoey platform</description>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>