unpackaged/main/default/objects/CostCentre__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>Cost Centre Postcode - integrated with Zoey platform</description>
    <label>Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>