unpackaged/main/default/objects/CostCentre__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Date cost centre record last updated on the Zoey platform</description>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>